--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   graphview: ^1.1.1
   desktop_drop: ^0.3.3
+  url_launcher: ^6.1.2
   
 dev_dependencies:
   flutter_test:
